nuevo logo nike

--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ body{
 }
 
 #hero{
-    background-image: url("img/nike.png");
+    background-image: url("img/nike5.png");
     height: 90vh;
     width: 100%;
     background-size: cover;
