--- a/index.css
+++ b/index.css
@@ -502,3 +502,16 @@ footer .copyright{
     }
 
 }
+
+
+@media (max-width:398px){
+
+    #hero{
+        
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    
+    }
+
+}
