--- a/index.css
+++ b/index.css
@@ -441,7 +441,7 @@ footer .copyright{
     }
     #feature .fe-box{
         width: 155px;
-        margin: 0 0 15px 0;
+        margin: 20px 0 15px 0;
 
     }
     #product1 .pro{
