--- a/index.css
+++ b/index.css
@@ -515,3 +515,55 @@ footer .copyright{
     }
 
 }
+
+@media (max-width:409px){
+
+    #hero h4{
+        font-size: 22px;
+    }
+
+    #hero h2{
+        font-size: 35px;
+        line-height: 35px;
+    }
+
+    #hero h1{
+
+        font-size: 40px;
+        line-height: 35px;
+    }
+
+    #hero p{
+
+        font-size: 25px;
+        line-height: 35px;
+
+    }
+
+
+}
+
+@media (max-width:353px){
+
+    #hero h4{
+        font-size: 16px;
+    }
+
+    #hero h2{
+        font-size: 30px;
+        line-height: 30px;
+    }
+
+    #hero h1{
+
+        font-size: 30px;
+        line-height: 30px;
+    }
+
+    #hero p{
+
+        font-size: 20px;
+        line-height: 30px;
+
+    }
+}
