--- a/index.css
+++ b/index.css
@@ -417,6 +417,11 @@ footer .copyright{
         margin: 15px;
     }
 
+    #numerito{
+
+      visibility: hidden;
+
+    }
 }
 
 @media (max-width: 477px){
